Update footer text in privacy.html

--- a/privacy.html
+++ b/privacy.html
@@ -188,7 +188,7 @@
         <footer>
             版本號：1.0.20260206<br>
             最後更新日期：2026年2月6日<br>
-            SafeNow 1.0 開發團隊 保留所有權利
+            SafeNow 開發團隊 保留所有權利
         </footer>
     </div>
 </body>
